Fix z-index issue

--- a/src/platform/plugins/shared/dashboard/public/dashboard_container/_dashboard_container.scss
+++ b/src/platform/plugins/shared/dashboard/public/dashboard_container/_dashboard_container.scss
@@ -1,13 +1,17 @@
 @import './component/grid/index';
 @import './component/viewport/index';
 
+.kbnBody:has(.kbnGrid--freeform) {
+  overflow: hidden;
+  .dashboardTopNav {
+    z-index: 0;
+  }
+};
+
 .dashboardContainer, .dashboardViewport {
   flex: auto;
   display: flex;
   width: 100%;
-  &:has(.kbnGrid--freeform) {
-    overflow: hidden;
-  };
 }
 
 .dashboardViewport--loading {
